--- a/Pages/_ViewImports.cshtml
+++ b/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using TestProyect_Practice2
-@namespace TestProyect_Practice2.Pages
+﻿@using TestProject_Practice2
+@namespace TestProject_Practice2.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
